--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ yarn-debug.log*
 
 config/credentials.yml.enc
 config/database.yml
+
+.framgia-ci-reports/
+.framgia-ci-result.temp.yml
+test/
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
