Chapter 10: Updating, Showing and deleting users

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,6 +5,7 @@ link:
   rails_help_link: "http://www.railstutorial.org/help"
   rails_book_link: "http://www.railstutorial.org/book"
   rails_author_link: "https://www.michaelhartl.com/"
+  gravatar_email_link: "http://gravatar.com/emails"
 name:
   max_length: 50
 email:
@@ -13,4 +14,7 @@ email:
 password:
   min_length: 5
 avatar:
-  size: 80
+  default_size: 80
+  list_size: 50
+pagination:
+  per_number: 10
